# cosmos

./: .gitignore  Cargo.toml  Makefile  README.md  qemu.dts
.cargo/: config.toml
disk_image/: Cargo.toml
disk_image/src/: main.rs
qemu/: .gitignore  cargo-qemu  cosmos-loader  install  launch
qemu/dtb/: build_dtb  qemu.dtb  qemu.dts  qemu_cosmos.dts  qemu_dtb.asm  qemu_dtb.dts
qemu/esp/EFI/boot/: bootaa64.efi
qemu/uefi/: launch
src/: acpi.rs  console.rs  driver.rs  irq.rs  loader.rs  log.rs  macros.rs  main.rs  print.rs  start.rs  vga_buffer.rs
src/arch/: mod.rs
src/arch/aarch64/: console.rs  constants.rs  dtb.rs  el.s  entry.rs  entry.s  irq.rs  kernel.ld  link.ld  mod.rs  pl011.rs  serial.rs  start.rs  start.s  state.rs  stdout.rs  timer.rs
src/arch/aarch64/console/: mod.rs  pl011.rs  pl011_regs.rs
src/arch/aarch64/devicetree/: mod.rs
src/arch/aarch64/drivers/: mod.rs
src/arch/aarch64/exception/: el.rs  handlers.rs  irq.rs  mod.rs  sgi.rs  state.rs  test.rs  timer.rs  vector_table.s
src/arch/aarch64/interrupts/: handlers.rs  irq.s  mod.rs  timer.rs
src/arch/aarch64/memory/: address_space.rs  mod.rs  (+2 more)
src/bsp/: mod.rs
src/bsp/virt/: kernel.ld  mod.rs
src/console/: interface.rs  log.rs  mod.rs
src/entity/: kernel.rs  mod.rs  tls.rs
src/init/: dtb.rs  mod.rs
src/interface/: console.rs  irq.rs  mod.rs
src/interrupt/: interface.rs
src/memory/: address_space.rs  align.rs  kernel_mapper.rs  mod.rs  translation_granule.rs  translation_table.rs
src/memory/mmu/: error.rs  interface.rs  mod.rs  page_alloc.rs
src/memory/translation_table/: interface.rs
src/memory/types/: address.rs  attribute.rs  descriptors.rs  granule.rs  memory.rs  mod.rs  page.rs
src/scheduler/: mod.rs
src/sync/: mod.rs  null_lock.rs  spin.rs  spinlock.rs
src/utils/: mod.rs
(+35 files in other folders)
