[package]
name = "cosmos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aarch64 = "0.0.11"
acpi = "5.0.0"
arm-gic = "0.1.0"
generic_once_cell = "0.1.1"
hermit-dtb = "0.1.1"
lock_api = "0.4.11"
log = "0.4.20"
uefi = { version = "0.26.0", features = ["alloc"] }
uefi-services = "0.23.0"
