[package]
name = "cosmos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["qemu-virt"]
qemu-virt=[]

[dependencies]
aarch64-cpu = { version = "9.x.x" }
aarch64-paging = "0.11.x"
acpi = "6.x.x"
arm-gic = "0.1.x"
embedded-alloc = "0.7.0"
generic_once_cell = "0.1.1"
goblin = { version = "0.10.x", default-features = false, features = ["elf64"] }
hermit-dtb = "0.1.1"
lock_api = "0.4.11"
log = "0.4.x"
plain = "0.2.3"
qemu-exit = "3.0.2"
spin = "0.10.x"
sptr = "0.3.2"
tock-registers = { version = "0.8.x", default-features = false, features = ["register_types"] }

[dependencies.fdt-rs]
version = "0.4"
default-features = false

[[bin]]
name = "cosmos"
test = false
bench = false
